syntax = "proto3";

service AppointmentService {
  rpc CreateAppointment (CreateAppointmentRequest) returns (AppointmentResponse);
  rpc GetAppointment (GetAppointmentRequest) returns (AppointmentResponse);
  rpc GetPendingAppointments (GetPendingAppointmentsRequest) returns (PendingAppointmentsResponse);
}

message CreateAppointmentRequest {
  int32 userId = 1;
  string date = 2;
  string status = 3;
}

message GetAppointmentRequest {
  int32 appointmentId = 1;
}

message GetPendingAppointmentsRequest {
  int32 userId = 1;
}

message AppointmentResponse {
  int32 appointmentId = 1;
  int32 userId = 2;
  string date = 3;
  string status = 4;
}

message PendingAppointmentsResponse {
  repeated AppointmentResponse appointments = 1;
}
